[package]
name = "hash-dir"
version = "0.2.1"
edition = "2021"
categories = ["command-line-utilities"]
description = "hash directory"
license = "MIT OR Apache-2.0"
repository = "https://github.com/stiction/hash-dir"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
md-5 = "0.10.5"
rayon = "1.7.0"
